# responder-thinker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  audio_convert.py  conftest.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  realtime_bridge.py  router.py  session_store.py  test_audio_convert.py  test_full_pipeline.py  test_realtime_ws.py  test_vad_config.py  test_webrtc_echo.py  weather.py  webrtc_server.py
backend/: audio_convert.py  config.py  main.py  vad.py
backend/observability/: tracing.py
backend/state/: session_store.py  user_context.py
backend/thinkers/: base.py  knowledge.py  news.py  research.py  router.py  stocks.py  weather.py
backend/transport/: realtime_bridge.py  webrtc_server.py
docs/: vad-integration-spec.md  vad-tasks.md
frontend/static/: app.js  index.html
tests/: test_vad.py
